[package]
name = "porors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.66"
humantime = "2.1.0"
notify-rust = "4.5.10"
serde = "1.0.145"

[dependencies.clap]
version = "4.0.13"
features = ["cargo", "derive"]

[dependencies.crossterm]
version = "0.25.0"
features = ["event-stream"]

[dependencies.dynfmt]
version = "0.1.5"
features = ["curly"]

[dependencies.async-std]
version = "1.12.0"
features = ["unstable"]
